--- a/index.html
+++ b/index.html
@@ -1,12 +1,87 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Affiliate AI Store</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Affiliate Fashion Store</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f5f5f5;
+            margin: 0;
+            padding: 20px;
+        }
+
+        .product-card {
+            background: white;
+            width: 100%;
+            max-width: 470px;
+            margin: auto;
+            border-radius: 18px;
+            padding: 18px;
+            box-shadow: 0 6px 18px rgba(0,0,0,0.15);
+        }
+
+        .product-card img {
+            width: 100%;
+            border-radius: 14px;
+        }
+
+        .title {
+            font-size: 20px;
+            font-weight: bold;
+            margin: 12px 0 5px 0;
+        }
+
+        .desc {
+            font-size: 14px;
+            color: #555;
+            margin-bottom: 12px;
+        }
+
+        .price {
+            font-size: 18px;
+            font-weight: bold;
+            color: #111;
+            margin-bottom: 18px;
+        }
+
+        .buy-btn {
+            display: block;
+            text-align: center;
+            background: #ff4500;
+            color: white;
+            padding: 14px;
+            border-radius: 10px;
+            font-size: 16px;
+            font-weight: bold;
+            text-decoration: none;
+            transition: 0.2s;
+        }
+
+        .buy-btn:hover {
+            background: #d93b00;
+        }
+    </style>
 </head>
 <body>
-    <h1>Affiliate AI Store</h1>
-    <p>Welcome! This is your starter affiliate site.</p>
+
+    <div class="product-card">
+        <img src="https://via.placeholder.com/600x700.png?text=Foto+Produk" alt="Produk Fashion">
+
+        <div class="title">Outfit Keren Buat Anak Muda</div>
+
+        <div class="desc">
+            Pilihan outfit yang lagi hype — harga ramah kantong, cocok buat daily look, sekolah, nongkrong,
+            atau casual streetwear. Bahan nyaman dan kelihatan premium.
+        </div>
+
+        <div class="price">Rp 30.000 - 70.000</div>
+
+        <a class="buy-btn" href="https://s.shopee.co.id/7fSPFYC1vR" target="_blank">
+            BELI SEKARANG
+        </a>
+    </div>
+
 </body>
 </html>
